Add '1.21.4-pre3' sources