@@ -27,19 +27,21 @@ public class CocoaDecorator extends TreeDecorator {
       RandomSource var2 = var1.random();
       if (!(var2.nextFloat() >= this.probability)) {
          ObjectArrayList var3 = var1.logs();
-         int var4 = ((BlockPos)var3.get(0)).getY();
-         var3.stream().filter((var1x) -> var1x.getY() - var4 <= 2).forEach((var2x) -> {
-            for(Direction var4 : Direction.Plane.HORIZONTAL) {
-               if (var2.nextFloat() <= 0.25F) {
-                  Direction var5 = var4.getOpposite();
-                  BlockPos var6 = var2x.offset(var5.getStepX(), 0, var5.getStepZ());
-                  if (var1.isAir(var6)) {
-                     var1.setBlock(var6, (BlockState)((BlockState)Blocks.COCOA.defaultBlockState().setValue(CocoaBlock.AGE, var2.nextInt(3))).setValue(CocoaBlock.FACING, var4));
+         if (!var3.isEmpty()) {
+            int var4 = ((BlockPos)var3.getFirst()).getY();
+            var3.stream().filter((var1x) -> var1x.getY() - var4 <= 2).forEach((var2x) -> {
+               for(Direction var4 : Direction.Plane.HORIZONTAL) {
+                  if (var2.nextFloat() <= 0.25F) {
+                     Direction var5 = var4.getOpposite();
+                     BlockPos var6 = var2x.offset(var5.getStepX(), 0, var5.getStepZ());
+                     if (var1.isAir(var6)) {
+                        var1.setBlock(var6, (BlockState)((BlockState)Blocks.COCOA.defaultBlockState().setValue(CocoaBlock.AGE, var2.nextInt(3))).setValue(CocoaBlock.FACING, var4));
+                     }
                   }
                }
-            }
 
-         });
+            });
+         }
       }
    }
 }
